# equiry-brief

./: .gitignore  pyproject.toml
prompts/: prompt_0_0_1.md  prompt_0_0_2.md  prompt_0_0_3.md  prompt_0_0_4.md  prompt_0_0_5.md  prompt_0_0_6.md
reports/: 2026-05-03_report.md
src/: cli.py  const.py  core.py  mode_enum.py  models.py  output_manager.py  telegram_bot.py
